# author-sct

./: CMakeLists.txt  Notes  README.md
include/: vec.h
include/core/: app_core.h  renderer.h  server.h  ui.h
include/core/ui/: console.h  renderer.h  ui.h
include/rev2/interface/: IObserver.h  ISocket.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/include/: imgui.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
lib/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
lib/libuv/: uv.lib  uv_a.lib
lib/libuv/lib/: uv_a.lib
src/: main.cpp
src/core/: app_core.cpp  renderer.cpp  server.cpp  ui.cpp
src/core/ui/: console.cpp  renderer.cpp  ui.cpp
src/rev2/net/: Server.cpp
